Блок edge с карточками

--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
         </nav>
       </div>
       <div class="header-hero hero">
-        <div class="title hero__title">A Powerful & Unique App Landing Template</div>
+        <h1 class="title hero__title">A Powerful & Unique App Landing Template</h1>
         <div class="hero__subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
         <ul class="list hero-list">
           <li class="list hero-list__item">
@@ -47,6 +47,68 @@
   </header>
 
   <main>
+
+    <section class="edge section">
+      <div class="container">
+        <div class="edge-cards">
+          <div class="edge-card">
+            <div class="edge__image">
+              <img src="" alt="">
+            </div>
+            <div class="edge-content">
+              <h3 class="edge__subtitle">Sell any product online</h3>
+              <p class="edge__text">Over 92% of computers are infected with Adware and spyware. Such software is</p>
+            </div>
+          </div>
+          <div class="edge-card">
+            <div class="edge__image">
+              <img src="" alt="">
+            </div>
+            <div class="edge-content">
+              <h3 class="edge__subtitle">Very easy to customize</h3>
+              <p class="edge__text">Many of us are so used to working on a computer desktop that when it comes</p>
+            </div>
+          </div>
+          <div class="edge-card">
+            <div class="edge__image">
+              <img src="" alt="">
+            </div>
+            <div class="edge-content">
+              <h3 class="edge__subtitle">Unlimited colors</h3>
+              <p class="edge__text">Audio player software is used to play back sound recordings in one of the many</p>
+            </div>
+          </div>
+          <div class="edge-card">
+            <div class="edge__image">
+              <img src="" alt="">
+            </div>
+            <div class="edge-content">
+              <h3 class="edge__subtitle">Responsive, HTML5, CSS3</h3>
+              <p class="edge__text">Computers have become ubiquitous in almost every facet of our lives. At work</p>
+            </div>
+          </div>
+          <div class="edge-card">
+            <div class="edge__image">
+              <img src="" alt="">
+            </div>
+            <div class="edge-content">
+              <h3 class="edge__subtitle">Designed to convert</h3>
+              <p class="edge__text">If you are looking for a new way to promote your business that won’t cost</p>
+            </div>
+          </div>
+          <div class="edge-card">
+            <div class="edge__image">
+              <img src="" alt="">
+            </div>
+            <div class="edge-content">
+              <h3 class="edge__subtitle">With no boundaries</h3>
+              <p class="edge__text">Now, if you are interested in being the best player, getting really good money and</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- /.edge section -->
   </main>
   
 </body>
