--- a/src/index.html
+++ b/src/index.html
@@ -31,13 +31,13 @@
         <h1 class="title hero__title">A Powerful & Unique App Landing Template</h1>
         <div class="hero__subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
         <ul class="list hero-list">
-          <li class="list hero-list__item">
+          <li class="hero-list__item">
             <i class="fas fa-check-circle"></i>
             <span>Unlimited colors: banner with images, slider or video</span></li>
-          <li class="list hero-list__item">
+          <li class="hero-list__item">
             <i class="fas fa-check-circle"></i>
             <span>Fully Responsive and powered by HTML5 and CSS3</span></li>
-          <li class="list hero-list__item">
+          <li class="hero-list__item">
             <i class="fas fa-check-circle"></i>
             <span>Very easy to customize : set up in minutes</span></li>
         </ul>
@@ -48,67 +48,173 @@
 
   <main>
 
-    <section class="edge section">
+    <section class="features section">
       <div class="container">
-        <div class="edge-cards">
-          <div class="edge-card">
-            <div class="edge__image">
-              <img src="" alt="">
+        <div class="features-cards">
+          <div class="features__card">
+            <div class="features__icon">
+              <i class="fas fa-tags"></i>
             </div>
-            <div class="edge-content">
-              <h3 class="edge__subtitle">Sell any product online</h3>
-              <p class="edge__text">Over 92% of computers are infected with Adware and spyware. Such software is</p>
-            </div>
-          </div>
-          <div class="edge-card">
-            <div class="edge__image">
-              <img src="" alt="">
-            </div>
-            <div class="edge-content">
-              <h3 class="edge__subtitle">Very easy to customize</h3>
-              <p class="edge__text">Many of us are so used to working on a computer desktop that when it comes</p>
+            <div class="features-content">
+              <h3 class="subtitle features__subtitle">Sell any product online</h3>
+              <p class="features__text">Over 92% of computers are infected with Adware and spyware. Such software is</p>
             </div>
           </div>
-          <div class="edge-card">
-            <div class="edge__image">
-              <img src="" alt="">
+          <div class="features__card">
+            <div class="features__icon">
+              <i class="fas fa-cog"></i>
             </div>
-            <div class="edge-content">
-              <h3 class="edge__subtitle">Unlimited colors</h3>
-              <p class="edge__text">Audio player software is used to play back sound recordings in one of the many</p>
-            </div>
-          </div>
-          <div class="edge-card">
-            <div class="edge__image">
-              <img src="" alt="">
-            </div>
-            <div class="edge-content">
-              <h3 class="edge__subtitle">Responsive, HTML5, CSS3</h3>
-              <p class="edge__text">Computers have become ubiquitous in almost every facet of our lives. At work</p>
+            <div class="features-content">
+              <h3 class="subtitle features__subtitle">Very easy to customize</h3>
+              <p class="features__text">Many of us are so used to working on a computer desktop that when it comes</p>
             </div>
           </div>
-          <div class="edge-card">
-            <div class="edge__image">
-              <img src="" alt="">
+          <div class="features__card">
+            <div class="features__icon">
+              <i class="fas fa-paint-brush"></i>
             </div>
-            <div class="edge-content">
-              <h3 class="edge__subtitle">Designed to convert</h3>
-              <p class="edge__text">If you are looking for a new way to promote your business that won’t cost</p>
+            <div class="features-content">
+              <h3 class="subtitle features__subtitle">Unlimited colors</h3>
+              <p class="features__text">Audio player software is used to play back sound recordings in one of the many</p>
             </div>
           </div>
-          <div class="edge-card">
-            <div class="edge__image">
-              <img src="" alt="">
+          <div class="features__card">
+            <div class="features__icon">
+              <i class="fas fa-fire-extinguisher"></i>
             </div>
-            <div class="edge-content">
-              <h3 class="edge__subtitle">With no boundaries</h3>
-              <p class="edge__text">Now, if you are interested in being the best player, getting really good money and</p>
+            <div class="features-content">
+              <h3 class="subtitle features__subtitle">Responsive, HTML5, CSS3</h3>
+              <p class="features__text">Computers have become ubiquitous in almost every facet of our lives. At work</p>
+            </div>
+          </div>
+          <div class="features__card">
+            <div class="features__icon">
+              <i class="fas fa-file-alt"></i>
+            </div>
+            <div class="features-content">
+              <h3 class="subtitle features__subtitle">Designed to convert</h3>
+              <p class="features__text">If you are looking for a new way to promote your business that won’t cost</p>
+            </div>
+          </div>
+          <div class="features__card">
+            <div class="features__icon">
+              <i class="far fa-life-ring"></i>
+            </div>
+            <div class="features-content">
+              <h3 class="subtitle features__subtitle">With no boundaries</h3>
+              <p class="features__text">Now, if you are interested in being the best player, getting really good money and</p>
             </div>
           </div>
         </div>
       </div>
     </section>
-    <!-- /.edge section -->
+    <!-- /.features section -->
+
+    <div class="section support">
+      <div class="container">
+        <div class="support-wrap">
+          <h1 class="title support__title">We don’t leave you stranded</h1>
+          <p class="support__subtitle">Everyone’s reasons for learning user interface design are different. If you’re already a developer, or a PM, or a UX designer, why develop this totally separate skill?</p>
+          <p class="support__text">Everyone’s reasons for learning user interface design are different. If you’re already a developer, or a PM, or a UX designer, why develop this totally separate skill? If you’re already a developer, or a PM, or a UX designer.</p>
+          <ul class="list support-list">
+            <li class="support-list__item">
+              <i class="fas fa-check-circle"></i>
+              <span>Unlimited colors: banner with images, slider or video</span></li>
+            <li class="support-list__item">
+              <i class="fas fa-check-circle"></i>
+              <span>Fully Responsive and powered by HTML5 and CSS3</span></li>
+            <li class="support-list__item">
+              <i class="fas fa-check-circle"></i>
+              <span>Very easy to customize : set up in minutes</span></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <!-- /.section support -->
+
+    <section class="section screenshots">
+      <div class="container">
+        <div class="screenshots-wrap">
+          <h1 class="title screenshots__title">Take a look at our screenshots</h1>
+          <span class="screenshots__subtitle">Everyone’s reasons for learning user interface design are different. If you’re already a developer, or a PM, or a UX designer, why develop this totally separate skill?</span>
+        </div>
+      </div>
+    </section>
+    <!-- /.section screenshots -->
+
+    <section class="section package">
+      <div class="container">
+        <div class="package-wrap">
+          <h1 class="title package__title">We've got the perfect package for you</h1>
+          <span class="package__subtitle">Everyone’s reasons for learning user interface design are different. If you’re already a developer, or a PM, or a UX designer, why develop this totally separate skill?</span>
+          <div class="package-cards">
+            <div class="package-card">
+              <h2 class="package-card__title">Basic</h2>
+              <span class="title package-card__price"><sup class="small_text">$</sup>12.0<span class="small_text">/m</span></span>
+              <ul class="list package-card-list">
+                <li class="package-card-list__item">One User</li>
+                <li class="package-card-list__item">Multiple Access</li>
+                <li class="package-card-list__item">SMS Support</li>
+                <li class="package-card-list__item">24/7 Online Support</li>
+              </ul>
+              <div class="package-card__label">Start Free Trial</div>
+              <button class="button package-card__button">Buy Now</button>
+            </div>
+            <div class="package-card">
+              <h2 class="package-card__title">Standard</h2>
+              <span class="title package-card__price"><sup class="small_text">$</sup>24.0<span class="small_text">/m</span></span>
+              <ul class="list package-card-list">
+                <li class="package-card-list__item">Five User</li>
+                <li class="package-card-list__item">Multiple Access</li>
+                <li class="package-card-list__item">SMS Support</li>
+                <li class="package-card-list__item">24/7 Online Support</li>
+              </ul>
+              <div class="package-card__label">Start Free Trial</div>
+              <button class="button package-card__button">Buy Now</button>
+            </div>
+            <div class="package-card">
+              <h2 class="package-card__title">Premium</h2>
+              <span class="title package-card__price"><sup class="small_text">$</sup>250.0<span class="small_text">/m</span></span>
+              <ul class="list package-card-list">
+                <li class="package-card-list__item">Twenty User</li>
+                <li class="package-card-list__item">Multiple Access</li>
+                <li class="package-card-list__item">SMS Support</li>
+                <li class="package-card-list__item">24/7 Online Support</li>
+              </ul>
+              <div class="package-card__label">Start Free Trial</div>
+              <button class="button package-card__button">Buy Now</button>
+            </div>
+            <div class="package-card">
+              <h2 class="package-card__title">Enterprise</h2>
+              <span class="title package-card__price"><sup class="small_text">$</sup>999.0<span class="small_text">/m</span></span>
+              <ul class="list package-card-list">
+                <li class="package-card-list__item">Unlimited User</li>
+                <li class="package-card-list__item">Multiple Access</li>
+                <li class="package-card-list__item">SMS Support</li>
+                <li class="package-card-list__item">24/7 Online Support</li>
+              </ul>
+              <div class="package-card__label">Start Free Trial</div>
+              <button class="button package-card__button">Buy Now</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- /.section package -->
+
+    <div class="video">
+      <iframe width="100%" height="400" src="https://www.youtube.com/embed/ZTZPOAdxJao" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+
+    <section class="section feedback">
+      <div class="container">
+        <div class="feedback-wrap">
+          <h1 class="title feedback__title">What our customers are saying</h1>
+          <span class="feedback__subtitle">Everyone’s reasons for learning user interface design are different. If you’re already a developer, or a PM, or a UX designer, why develop this totally separate skill?</span>
+
+        </div>
+      </div>
+    </section>
   </main>
   
 </body>
