--- a/src/index.html
+++ b/src/index.html
@@ -139,6 +139,39 @@
         <div class="portfolio-wrap">
           <h1 class="title portfolio__title">Take a look at our screenshots</h1>
           <span class="portfolio__subtitle">Everyone’s reasons for learning user interface design are different. If you’re already a developer, or a PM, or a UX designer, why develop this totally separate skill?</span>
+          <div class="portfolio-slider">
+            <div class="portfolio__item">
+              <img src="img/portfolio/Portfolio_01.png" alt="">
+            </div>
+            <div class="portfolio__item">
+              <img src="img/portfolio/Portfolio_01.png" alt="">
+            </div>
+            <div class="portfolio__item">
+              <img src="img/portfolio/Portfolio_01.png" alt="">
+            </div>
+            <div class="portfolio__item">
+              <img src="img/portfolio/Portfolio_01.png" alt="">
+            </div>
+            <div class="portfolio__item">
+              <img src="img/portfolio/Portfolio_01.png" alt="">
+            </div>
+            <div class="portfolio__item">
+              <img src="img/portfolio/Portfolio_01.png" alt="">
+            </div>
+            <div class="portfolio__item">
+              <img src="img/portfolio/Portfolio_01.png" alt="">
+            </div>
+          </div>
+          <!-- /.portfolio-slider -->
+          <div class="arrows portfolio__arrows">
+            <div class="arrows__left portfolio__arrows_left">
+              <i class="fas fa-long-arrow-alt-left"></i>
+            </div>
+            <div class="arrows__right portfolio__arrows_right">
+              <i class="fas fa-long-arrow-alt-right"></i>
+            </div>
+          </div>
+          <!-- /.arrows -->
         </div>
       </div>
     </section>
@@ -357,6 +390,7 @@
     <script src="js/slick.min.js"></script>
     <script src="js/sliders-setting.js"></script>
     <script src="js/video-play.js"></script>
+    <script src="js/portfolio-slider.js"></script>
 <!-- endbuild -->
   
 </body>
