portfolio slider. support image position. download button.

--- a/src/index.html
+++ b/src/index.html
@@ -110,9 +110,12 @@
     </section>
     <!-- /.features section -->
 
-    <div class="section support" id="support">
+    <section class="support" id="support">
       <div class="container">
         <div class="support-wrap">
+          <div class="support__img">
+            <!-- <img src="img/support/iPhone.png" alt="iphone"> -->
+          </div>
           <div class="support-content">
             <h1 class="title support__title">We don’t leave you stranded</h1>
             <p class="support__subtitle">Everyone’s reasons for learning user interface design are different. If you’re already a developer, or a PM, or a UX designer, why develop this totally separate skill?</p>
@@ -131,7 +134,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </ы>
     <!-- /.section support -->
 
     <section class="section portfolio">
@@ -139,29 +142,29 @@
         <div class="portfolio-wrap">
           <h1 class="title portfolio__title">Take a look at our screenshots</h1>
           <span class="portfolio__subtitle">Everyone’s reasons for learning user interface design are different. If you’re already a developer, or a PM, or a UX designer, why develop this totally separate skill?</span>
-          <div class="portfolio-slider">
-            <div class="portfolio__item">
-              <img src="img/portfolio/Portfolio_01.png" alt="">
-            </div>
-            <div class="portfolio__item">
-              <img src="img/portfolio/Portfolio_01.png" alt="">
-            </div>
-            <div class="portfolio__item">
-              <img src="img/portfolio/Portfolio_01.png" alt="">
-            </div>
-            <div class="portfolio__item">
-              <img src="img/portfolio/Portfolio_01.png" alt="">
-            </div>
-            <div class="portfolio__item">
-              <img src="img/portfolio/Portfolio_01.png" alt="">
-            </div>
-            <div class="portfolio__item">
-              <img src="img/portfolio/Portfolio_01.png" alt="">
-            </div>
-            <div class="portfolio__item">
-              <img src="img/portfolio/Portfolio_01.png" alt="">
-            </div>
-          </div>
+          <ul class="list portfolio-slider">
+            <li class="portfolio-slider__item">
+              <img src="img/portfolio/slide_01.jpg" class="portfolio__img_0" alt="portfolio-img">
+            </li>
+            <li class="portfolio-slider__item">
+              <img src="img/portfolio/slide_02.jpg" class="portfolio__img_1" alt="portfolio-img">
+            </li>
+            <li class="portfolio-slider__item">
+              <img src="img/portfolio/slide_03.jpg" class="portfolio__img_2" alt="portfolio-img">
+            </li>
+            <li class="portfolio-slider__item">
+              <img src="img/portfolio/slide_04.jpg" class="portfolio__img_3" alt="portfolio-img">
+            </li>
+            <li class="portfolio-slider__item">
+              <img src="img/portfolio/slide_05.jpg" class="portfolio__img_4" alt="portfolio-img">
+            </li>
+            <li class="portfolio-slider__item">
+              <img src="img/portfolio/slide_06.jpg" class="portfolio__img_5" alt="portfolio-img">
+            </li>
+            <li class="portfolio-slider__item">
+              <img src="img/portfolio/slide_07.jpg" class="portfolio__img_6" alt="portfolio-img">
+            </li>
+          </ul>
           <!-- /.portfolio-slider -->
           <div class="arrows portfolio__arrows">
             <div class="arrows__left portfolio__arrows_left">
