--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,7 @@
             <li class="header-list__item"><a href="#package">Pricing</a></li>
             <li class="header-list__item"><a href="#download">Download Now</a></li>
           </ul>
+          <button class="header-burger burger_alert "><span class="header-burger__line"></span></button>
         </nav>
       </div>
       <div class="header-hero hero">
@@ -45,6 +46,23 @@
       </div>
     </div>
   </header>
+
+  <!-- МОДАЛЬНОЕ ОКНО БУРГЕР-МЕНЮ-->
+  <div class="menu-mobile" id="menu_mobile">
+    <div class="menu-block">
+      <nav class="menu-nav">
+        <ul class="menu-list">
+          <li class="menu-list__item"><a href="#">Home</a></li>
+          <li class="menu-list__item"><a href="#features">Features</a></li>
+          <li class="menu-list__item"><a href="#package">Pricing</a></li>
+          <li class="menu-list__item"><a href="#download">Download Now</a></li>
+        </ul>
+      </nav>
+      <!-- /.menu-nav -->
+    </div>
+    <!-- /.menu-block -->
+  </div>
+  <!-- /.menu-mobile -->
 
   <main>
 
@@ -291,13 +309,13 @@
               </div>
             </div>
             <div class="feedback-card">
-              <p class="feedback__text">Definitely a great theme and the support team are fantastic. Customer support is numero uno and ShapingRain have got this spot on. Cheers guys.</p>
+              <p class="feedback__text">Very happy with the theme and incredibly easy to configure, well done! I cannot emphasize how awesome this theme and developer support are.</p>
               <div class="feedback__author">
                 <div class="feedback__photo">
-                  <img src="img/feedback/feedback_3.png" alt="feedback_author">
+                  <img src="img/feedback/feedback_2.png" alt="feedback_author">
                 </div>
                 <div class="feedback__about">
-                  <span class="feedback__name">Samantha Bilbau</span>
+                  <span class="feedback__name">Gary Sebastian</span>
                   <span class="feedback__os">Apple Inc.</span>
                 </div>
               </div>
@@ -394,6 +412,7 @@
     <script src="js/sliders-setting.js"></script>
     <script src="js/video-play.js"></script>
     <script src="js/portfolio-slider.js"></script>
+    <script src="js/burger.js"></script>
 <!-- endbuild -->
   
 </body>
