сборка gulp. menu burger. адаптив.

--- a/src/index.html
+++ b/src/index.html
@@ -152,7 +152,7 @@
           </div>
         </div>
       </div>
-    </ы>
+    </section>
     <!-- /.section support -->
 
     <section class="section portfolio">
@@ -412,7 +412,7 @@
     <script src="js/sliders-setting.js"></script>
     <script src="js/video-play.js"></script>
     <script src="js/portfolio-slider.js"></script>
-    <script src="js/burger.js"></script>
+    <script src="js/menu-burger.js"></script>
 <!-- endbuild -->
   
 </body>
